# Finite-State-Machine

./: .gitignore  FiniteStateMachine.sln  README.md
FiniteStateMachine.Core/: FiniteStateMachine.cs  IState.cs  ModThreeState.cs
FiniteStateMachine.Python/: pyproject.toml
FiniteStateMachine.Python/finite_state_machine.egg-info/: PKG-INFO  SOURCES.txt
FiniteStateMachine.Python/fsm/: __init__.py  finite_state_machine.py  mod_three_state.py  state.py
FiniteStateMachine.Python/tests/: test_mod_three.py
FiniteStateMachine.Tests/: FiniteStateMachine.Tests.csproj  ModThreeTests.cs
